# Polyculture_Growth_Monitoring_System

./: README.md  plant_growth.sh
input_sample/: depth.tiff
src/yolo_point_cloud/: CMakeLists.txt  package.xml
src/yolo_point_cloud/src/: imageCaptured.cpp  imageCapturedv2.py  measurements_node.cpp  pcl_measurements_node.cpp  store_features_node.cpp  yolov7_leaf_detection.py  yolov8_leaf_detection.py  yolov8_segmentation_node.py
